# IaCAnalysis

./: .gitignore  README.md  example_custom_constraints.py  infracost-usage.yml  pipr_dataset_stats.csv  pyproject.toml  ranking_by_constraints.txt  ranking_by_supported_resources.txt  requirements.txt  run_example
benchmarks/01_s3-sns-lambda-chain/: cfn.yaml
examples/: GITHUB-EXAMPLES.md  apig-sqs-lambda-db.yaml  db-lambda-cw.yaml  elb-ec2-vpc.yaml  iac-analysis-sample.template  lambda-s3-cw.yaml  s3-lambda-trigger.yaml  s3-sns.yaml  security-rds-ec2.yaml  simple-lambda-s3.yaml  sns-lambda-alias.yaml  vpc-ecs-alb.yaml  vpc-natg-ec2.yaml
iac_analysis/: __init__.py  __main__.py  analysis.py  benchmark.py  cfn.py  cli.py  custom_generator.py  estimates.py  helpers.py  iac_analysis.py  infra.py  infracost.py  infrastructure.py  resource.py  solver.py  terraform.py
pipr_dataset/: 100966547.yaml  107111499.yaml  121333316.yaml  121473558.yaml  125417082.yaml  13386075.yaml  137603984.yaml  144745766.yaml  148418355.yaml  153061097.yaml  157899601.yaml  163125327.yaml  163315066.yaml  174826274.yaml  181561553.yaml  181720569.yaml  181720740.yaml  187089690.yaml  190412175.yaml  190484422.yaml  190583485.yaml  193340296.yaml  194041313.yaml  194098551.yaml  195850121.yaml  195851493.yaml  195899036.yaml  196598626.yaml  196702979.yaml  197647694.yaml  199184077.yaml  201490920.yaml  202494073.yaml  202768370.yaml  206185851.yaml  206293398.yaml  206303170.yaml  20723151.yaml  207312367.yaml  207839347.yaml  (+998 more)
pyscripts/: analyze_dataset.py  benchmark.py  rank_benchmarks.py
(+40 files in other folders)
